--- a/CommonBuild.yml
+++ b/CommonBuild.yml
@@ -1,6 +1,6 @@
-pool:
-  vmImage: 'ubuntu-latest'
-
-steps:
-- script: echo 'Testing GitHub Linked YAML Templates'
-  displayName: 'Run a one-line script'
+jobs:
+- job: Build
+  pool:
+    vmImage: 'ubuntu-latest'
+  steps:
+  - script:echo 'Testing GitHub Linked YAML Templates'
